objects/Async_Framework_Configuration__mdt/fields/Before_Cancelling__c.field-meta.xml
<CustomField>
    <fullName>Before_Cancelling__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Before Cancelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>