objects/Async_Framework_Configuration__mdt/fields/Cleanup_CPU_Reserve_ms__c.field-meta.xml
<CustomField>
    <fullName>Cleanup_CPU_Reserve_ms__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>CPU safety margin in milliseconds for cleanup task</description>
    <label>Cleanup CPU Reserve (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>