objects/Async_Framework_Configuration__mdt/fields/Days_To_Analyze__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Analyze__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days to analyze for historical performance in the learning batch</description>
    <label>Days To Analyze</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>