objects/Async_Framework_Configuration__mdt/fields/Default_CPU_Cost_ms__c.field-meta.xml
<CustomField>
    <fullName>Default_CPU_Cost_ms__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Default CPU cost in milliseconds when no historical performance data is available</description>
    <label>Default CPU Cost (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>