objects/Async_Framework_Configuration__mdt/fields/Delete_Pending_Max_Iterations__c.field-meta.xml
<CustomField>
    <fullName>Delete_Pending_Max_Iterations__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum iterations for delete pending operation to avoid SOQL-in-loop governor limit (max 100 SOQL/transaction)</description>
    <label>Delete Pending Max Iterations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>