objects/Async_Framework_Configuration__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <defaultValue>99</defaultValue>
    <description>Execution order for cleanup tasks</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>