objects/Async_Framework_Configuration__mdt/fields/Max_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Maximum number of tasks to process in a batch</description>
    <label>Max Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>