objects/Async_Framework_Configuration__mdt/fields/Max_Number_Worker__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_Worker__c</fullName>
    <defaultValue>32</defaultValue>
    <description>Nombre maximum de workers Queueable autorisés. Lors d&apos;une réduction de batch size, on double les workers jusqu&apos;à cette limite.</description>
    <label>Max Number Worker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>