objects/Async_Framework_Configuration__mdt/fields/Safe_CPU_Limit__c.field-meta.xml
<CustomField>
    <fullName>Safe_CPU_Limit__c</fullName>
    <defaultValue>45000</defaultValue>
    <description>CPU safety margin: 45s out of 60s available for worker execution</description>
    <label>Safe CPU Limit (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>