objects/Async_Framework_Configuration__mdt/fields/Safety_Margin_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Safety_Margin_Multiplier__c</fullName>
    <defaultValue>1.2</defaultValue>
    <description>Multiplier applied to average CPU time to add safety margin</description>
    <label>Safety Margin Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>