objects/Async_Framework_Configuration__mdt/fields/Scheduler_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Frequency_Minutes__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Scheduler_Frequency_Minutes default value</description>
    <label>Scheduler Frequency Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>