objects/Async_Framework_Configuration__mdt/fields/Status_Success__c.field-meta.xml
<CustomField>
    <fullName>Status_Success__c</fullName>
    <defaultValue>&quot;Success&quot;</defaultValue>
    <description>Status value indicating successful task execution</description>
    <label>Status Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>